# tsetlin

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE-MIT  Makefile  README.md
tsetlin-core/: Cargo.toml  README.md
tsetlin-core/src/: lib.rs
tsetlin-py-bindings/: Cargo.toml  Makefile  README-py.md  README.md  pyproject.toml
tsetlin-py-bindings/src/: lib.rs
tsetlin-py-examples/: Makefile  car.py  requirements.dev.txt
tsetlin-py-examples/classification/: binary_car.py  iris.py  multiclass_transport.py
