[package]
name = "tsetlin-py-bindings"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
name = "tsetlin"        # Python module name
crate-type = ["cdylib"] # Required for PyO3

[dependencies]
pyo3 = { version = "0.26.0", features = [
    "extension-module",
    "abi3-py38",
    "serde",
] }
tsetlin = { package = "tsetlin-core", path = "../tsetlin-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.26"

[package.metadata.maturin]
name = "tsetlin"
