[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "tsetlin"
version = "0.1.0"
description = "Rust Tsetlin Machine with Python bindings"
readme = "README-py.md"
requires-python = ">=3.8"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Jack Hoy", email = "jackh0x19@protonmail.com" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[tool.maturin]
name = "tsetlin"
